# jpc-rust

./: .env  .gitignore  Cargo.toml  Dockerfile.gateway  Dockerfile.product-service  Dockerfile.user-service  Makefile  PERFORMANCE_GUIDE.md  README.md  SCALING_GUIDE.md  docker-compose.yml  docker-swarm.yml  test_api.sh  test_microservices.sh  test_production_gateway.sh  test_resilience.sh  test_stress_gateway.sh
scripts/: health_check.sh  rolling_deploy.sh
src/: errors.rs  lib.rs  models.rs  repository.rs  service.rs
src/errors/: mod.rs  product_error.rs  user_error.rs
src/models/: product_model.rs
src/repositories/: mod.rs  product_repository.rs  user_repository.rs
src/services/: product_service.rs  user_service.rs
